--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ Markdown==3.0.1
 matplotlib==3.0.2
 more-itertools==4.3.0
 git+https://github.com/avisingh599/multiworld.git@19bf319422c0016260166bf64e194552bf2a9e68
-git+https://github.com/hartikainen/mujoco-py.git@29fcd26290c9417aef0f82d0628d29fa0dbf0fab
+git+https://github.com/hartikainen/mujoco-py.git
 networkx==2.2
 numpy==1.16.0
 opencv-python==4.0.0.21
@@ -73,13 +73,12 @@ pytest==4.0.1
 python-dateutil==2.7.5
 pytz==2018.7
 PyWavelets==1.0.1
-PyYAML==5.1
+PyYAML==3.13
 psutil==5.4.8
 ray[rllib,debug]==0.6.6
 redis==3.0.1
 requests==2.20.1
 rsa==3.4.2
-ruamel-yaml==0.15.46
 s3transfer==0.2.0
 scikit-image==0.14.2
 scikit-learn==0.20.1
@@ -95,5 +94,5 @@ tensorflow-probability==0.6.0
 termcolor==1.1.0
 toolz==0.9.0
 uritemplate==3.0.0
-urllib3==1.25.1
+urllib3==1.21.1
 Werkzeug==0.14.1
